--- a/K53_Rules_Test/parking_and_stopping_areas.html
+++ b/K53_Rules_Test/parking_and_stopping_areas.html
@@ -122,5 +122,7 @@
 
  <script type="text/javascript">
 
-
+ 	 				var parking_and_stopping_areas = 1; 
+		localStorage.setItem("parking_and_stopping_areas", parking_and_stopping_areas);
  </script>
+
