--- a/K53_Rules_Test/recklessness_and_negligence_on_the_road.html
+++ b/K53_Rules_Test/recklessness_and_negligence_on_the_road.html
@@ -92,5 +92,7 @@
 
  <script type="text/javascript">
 
-
+ 	 				var recklessness_and_negligence_on_the_road = 1; 
+		localStorage.setItem("recklessness_and_negligence_on_the_road", recklessness_and_negligence_on_the_road);
  </script>
+
