--- a/K53_Rules_Test/reflectors.html
+++ b/K53_Rules_Test/reflectors.html
@@ -80,6 +80,8 @@
 </html>
 
  <script type="text/javascript">
-
+ 	 				var reflectors = 1; 
+		localStorage.setItem("reflectors", reflectors);
 
  </script>
+
