--- a/K53_Rules_Test/roadrules.html
+++ b/K53_Rules_Test/roadrules.html
@@ -530,7 +530,9 @@ DRUGS</a>
 </html>
 
    <script type="text/javascript">
-
+ 	 				var road_rules = 1; 
+		localStorage.setItem("road_rules", road_rules);
  </script>
+
 
 
