--- a/K53_Rules_Test/safety_and_precaution.html
+++ b/K53_Rules_Test/safety_and_precaution.html
@@ -81,6 +81,8 @@
 </html>
 
  <script type="text/javascript">
-
+ 	 				var safety_and_precaution = 1; 
+		localStorage.setItem("safety_and_precaution", safety_and_precaution);
 
  </script>
+
