--- a/K53_Rules_Test/steering.html
+++ b/K53_Rules_Test/steering.html
@@ -74,6 +74,8 @@
 </html>
 
  <script type="text/javascript">
-
+ 	 				var steering = 1; 
+		localStorage.setItem("steering", steering);
 
  </script>
+
