--- a/K53_Rules_Test/towing_vehicle_combinations.html
+++ b/K53_Rules_Test/towing_vehicle_combinations.html
@@ -86,6 +86,8 @@
 </html>
 
  <script type="text/javascript">
-
+ 	 				var towing_vehicle_combinations = 1; 
+		localStorage.setItem("towing_vehicle_combinations", towing_vehicle_combinations);
 
  </script>
+
