--- a/K53_Rules_Test/transporting_goods.html
+++ b/K53_Rules_Test/transporting_goods.html
@@ -109,6 +109,8 @@
 </html>
 
  <script type="text/javascript">
-
+ 	 				var transporting_goods = 1; 
+		localStorage.setItem("transporting_goods", transporting_goods);
 
  </script>
+
