--- a/K53_Rules_Test/vehicle_length_height_and_width.html
+++ b/K53_Rules_Test/vehicle_length_height_and_width.html
@@ -85,6 +85,8 @@
 </html>
 
  <script type="text/javascript">
-
+ 	 				var vehicle_length_height_and_width = 1; 
+		localStorage.setItem("vehicle_length_height_and_width", vehicle_length_height_and_width);
 
  </script>
+
