--- a/K53_Rules_Test/view_and_visibilty.html
+++ b/K53_Rules_Test/view_and_visibilty.html
@@ -74,5 +74,7 @@
 
  <script type="text/javascript">
 
-
+ 	 				var view_and_visibility = 1; 
+		localStorage.setItem("view_and_visibility", view_and_visibility);
  </script>
+
