--- a/K53_Rules_Test/learn_road_rules.html
+++ b/K53_Rules_Test/learn_road_rules.html
@@ -256,5 +256,111 @@
 </html>
 
  <script type="text/javascript">
+	 
+	 const general_rules_value = Number(localStorage.getItem("general_rules")) || 0;
+	 const general_rules = general_rules_value/1*100;
+	     const progress_general_rules = document.getElementById("1");
 
+    progress_general_rules.style.width = general_rules + "px";
+
+
+
+	 const overtaking_lanes_freeways_value = Number(localStorage.getItem("overtaking_lanes_freeways")) || 0;
+	 const overtaking_lanes_freeways = overtaking_lanes_freeways_value/1*100;
+	     const progress_overtaking_lanes_freeways= document.getElementById("2");
+
+    progress_overtaking_lanes_freeways.style.width = overtaking_lanes_freeways + "px";
+
+
+
+
+
+
+
+	 const direction_indicators_road_lanes_value = Number(localStorage.getItem("direction_indicators_road_lanes")) || 0;
+	 const direction_indicators_road_lanes = direction_indicators_road_lanes_value/1*100;
+	     const progress_direction_indicators_road_lanes = document.getElementById("3");
+
+    progress_direction_indicators_road_lanes.style.width = direction_indicators_road_lanes + "px";
+
+
+
+
+
+
+
+
+
+	 const speed_value = Number(localStorage.getItem("speed")) || 0;
+	 const speed = speed_value/1*100;
+	     const progress_speed = document.getElementById("4");
+
+    progress_speed.style.width = speed + "px";
+
+
+
+
+
+
+
+
+
+
+	 const parking_and_stopping_areas_value = Number(localStorage.getItem("parking_and_stopping_areas")) || 0;
+	 const parking_and_stopping_areas =parking_and_stopping_areas_value/1*100;
+	     const progress_parking_and_stopping_areas = document.getElementById("5");
+
+    progress_parking_and_stopping_areas.style.width = parking_and_stopping_areas + "px";
+
+
+
+
+
+
+
+
+	 const safety_and_precaution_value = Number(localStorage.getItem("safety_and_precaution")) || 0;
+	 const safety_and_precaution =safety_and_precaution_value/1*100;
+	     const progress_safety_and_precaution = document.getElementById("6");
+
+    progress_safety_and_precaution.style.width = safety_and_precaution + "px";
+
+
+
+
+
+	 const reflectors_value = Number(localStorage.getItem("reflectors")) || 0;
+	 const reflectors =reflectors_value/1*100;
+	     const progress_reflectors = document.getElementById("7");
+
+    progress_reflectors.style.width = reflectors + "px";
+
+
+
+
+
+
+
+
+
+
+	 const view_and_visibility_value = Number(localStorage.getItem("view_and_visibility")) || 0;
+	 const view_and_visibility = view_and_visibility_value/1*100;
+	     const progress_view_and_visibility = document.getElementById("8");
+
+    progress_view_and_visibility.style.width = view_and_visibility + "px";
+
+
+
+
+	 
+		 const lights_number_plates_value = Number(localStorage.getItem("lights_number_plates")) || 0;
+	 const lights_number_plates = lights_number_plates_value/1*100;
+	     const progress_lights_number_plates = document.getElementById("9");
+
+    progress_lights_number_plates.style.width = lights_number_plates + "px"; 
+
+
+	 
  </script>
+
