--- a/K53_Rules_Test/learn_road_rules.html
+++ b/K53_Rules_Test/learn_road_rules.html
@@ -361,6 +361,97 @@
     progress_lights_number_plates.style.width = lights_number_plates + "px"; 
 
 
+
+
+
+		 const steering_value = Number(localStorage.getItem("steering")) || 0;
+	 const steering = steering_value/1*100;
+	     const progress_steering = document.getElementById("10");
+
+    progress_steering.style.width = steering + "px"; 
+
+
+
+
+
+		 const brakes_and_tyres_value = Number(localStorage.getItem("brakes_tyres")) || 0;
+	 const brakes_and_tyres = brakes_and_tyres_value/1*100;
+	     const progress_brakes_and_tyres = document.getElementById("11");
+
+    progress_brakes_and_tyres.style.width = brakes_and_tyres + "px"; 
+
+
+
+
+
+
+
+		 const fuel_tank_and_engine_value = Number(localStorage.getItem("fuel_tank_engine")) || 0;
+	 const fuel_tank_and_engine = fuel_tank_and_engine_value/1*100;
+	     const progress_fuel_tank_and_engine = document.getElementById("12");
+
+    progress_fuel_tank_and_engine.style.width = fuel_tank_and_engine + "px"; 
+
+
+
+
+		 const vehicle_length_height_and_width_value = Number(localStorage.getItem("vehicle_length_height_and_width")) || 0;
+	 const vehicle_length_height_and_width = vehicle_length_height_and_width_value/1*100;
+	     const progress_vehicle_length_height_and_width = document.getElementById("13");
+
+    progress_vehicle_length_height_and_width.style.width = vehicle_length_height_and_width + "px"; 
+
+
+
+
+
+
+		 const transporting_goods_value = Number(localStorage.getItem("transporting_goods")) || 0;
+	 const transporting_goods = transporting_goods_value/1*100;
+	     const progress_transporting_goods = document.getElementById("14");
+
+    progress_transporting_goods.style.width = transporting_goods + "px"; 
+
+
+
+
+
+		 const towing_vehicle_combinations_value = Number(localStorage.getItem("towing_vehicle_combinations")) || 0;
+	 const towing_and_vehicle_combinations = towing_vehicle_combinations_value/1*100;
+	     const progress_towing_vehicle_combinations = document.getElementById("15");
+
+    progress_towing_vehicle_combinations.style.width = towing_vehicle_combinations + "px"; 
+
+
+
+
+
+		 const destruction_devices_value = Number(localStorage.getItem("destruction_devices")) || 0;
+	 const destruction_devices = destruction_devices_value/1*100;
+	     const progress_destruction_devices = document.getElementById("16");
+
+    progress_destruction_devices.style.width = destruction_devices + "px"; 
+
+
+
+
+
+		 const recklessness_and_negligence_on_the_road_value = Number(localStorage.getItem("recklessness_and_negligence_on_the_road")) || 0;
+	 const recklessness_and_negligence_on_the_road = recklessness_and_negligence_on_the_road_value/1*100;
+	     const progress_recklessness_and_negligence_on_the_road = document.getElementById("17");
+
+    progress_recklessness_and_negligence_on_the_road.style.width = recklessness_and_negligence_on_the_road + "px"; 
+
+
+
+		 const noise_on_the_road_value = Number(localStorage.getItem("noise_on_the_road")) || 0;
+	 const noise_on_the_road = noise_on_the_road_value/1*100;
+	     const progress_noise_on_the_road= document.getElementById("18");
+
+    progress_noise_on_the_road.style.width = noise_on_the_road + "px"; 
+
+
 	 
  </script>
+
 
