--- a/K53_Rules_Test/towing_vehicle_combinations.html
+++ b/K53_Rules_Test/towing_vehicle_combinations.html
@@ -30,7 +30,7 @@
 					<li><a href="intruder.html">ABOUT</a></li>
 				-->
 				<div id="navbar">
-					<a href="learn_road_rules.php"> <img src="../img/back.png"></a>
+					<a href="learn_road_rules.html"> <img src="../img/back.png"></a>
 				</div>
 				</nav>
 			</div>
@@ -90,4 +90,5 @@
 		localStorage.setItem("towing_vehicle_combinations", towing_vehicle_combinations);
 
  </script>
+
 
