--- a/K53_Rules_Test/towing_vehicle_combinations.html
+++ b/K53_Rules_Test/towing_vehicle_combinations.html
@@ -69,8 +69,8 @@
     	</div>
 
 	    <div class="btext">
-	    	<a href="learn_road_rules.php" class="btn">Back</a>
-            <a href="learn_road_rules.php" class="btn">Home</a>
+	    	<a href="learn_road_rules.html" class="btn">Back</a>
+            <a href="learn_road_rules.html" class="btn">Home</a>
         </div>
 
 
@@ -90,5 +90,6 @@
 		localStorage.setItem("towing_vehicle_combinations", towing_vehicle_combinations);
 
  </script>
+
 
 
