--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <a href="./home_images/home.html" class="btn">Free K53 Learners License  🚦🛣️</a> <br> <br>
 			<a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
- class="btn">🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08:
-				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R300 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span> </a><br> <br>
+ class="btn" style="min-height: 70px;">🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08:
+				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span> </a><br> <br>
 			<a href="./bursaries" class="btn">Bursaries 🎓</a><br> <br>
 			<a href="./universities" class="btn">Open TVETs and Universities 👩‍🎓</a><br> <br>
 			<a href="./jobs" class="btn">Jobs 👷‍♂️</a>
@@ -142,6 +142,7 @@
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
