--- a/K53_Controls_Test/heavy_vehicle_controls.html
+++ b/K53_Controls_Test/heavy_vehicle_controls.html
@@ -26,7 +26,7 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none; font-size: 11px;">
+   style="color: blue; text-decoration: none;">
       🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
 </a>
 
@@ -1441,7 +1441,7 @@
 
       <a href="learn_heavyvehicle.html#p1" style="margin-right: 70px;"><button onclick="learn()">Learn</button></a>
       <a href="#"><button onclick="learn()">Skip</button></a> <br> <br>
-	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;  font-size: 11px;">
       🚦Get the exact <span id="month"></span> pdf Memo <br><br> Code 08: 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span>
   </a>
     </div>
@@ -1915,6 +1915,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
