--- a/K53_Controls_Test/heavy_vehicle_controls.html
+++ b/K53_Controls_Test/heavy_vehicle_controls.html
@@ -1408,11 +1408,11 @@
 
 
     
-
+<!--
     <div  id='results8' style='text-align: center; margin-top: 20px;'>
       <button  name='skipSubmit' type='submit' id="butInstall">ADD</button> 
         </div>
-
+--> 
 
 
     <div  id="snackbar">
@@ -1422,19 +1422,19 @@
     <div  id="results">
       <a href="heavy_vehicle_controls.html">Try again. Reload This Page</a><br> <br>
 	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;font-size: 11px;">
-      🚦Get the exact <span id="month"></span> pdf Memo <br> Code 08: 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span>
+      🚦Get the exact <span id="month"></span> pdf Memo <br><br> Code 08: 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span>
   </a>
     </div>
     <div  id="results2">
       <a href="test_code.html">Home Page</a><br> <br>
 	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;font-size: 11px;">
-      🚦Get the exact <span id="month"></span> pdf Memo <br> Code 08: 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span>
+      🚦Get the exact <span id="month"></span> pdf Memo <br> <br>Code 08: 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span>
   </a>
     </div>
     <div  id="results3">
       <a href="heavy_vehicle_controls.html">Time Over. Reload This Page</a><br> <br>
 	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;font-size: 11px;">
-      🚦Get the exact <span id="month"></span> pdf Memo <br> Code 08: 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span>
+      🚦Get the exact <span id="month"></span> pdf Memo <br> <br>Code 08: 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span>
   </a>
     </div>
     <div  id="results4">
@@ -1915,6 +1915,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
