--- a/K53_Controls_Test/light_vehicle_controls.html
+++ b/K53_Controls_Test/light_vehicle_controls.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 14</h3>
   </div>
   <div class="time_score">
-<a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+<a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -120,7 +120,7 @@
     <h3>Question 2 of 14</h3>
   </div>
   <div class="time_score">
-    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+    <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -205,7 +205,7 @@
     <h3>Question 3 of 14</h3>
   </div>
   <div class="time_score">
-    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+    <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -290,7 +290,7 @@
     <h3>Question 4 of 14</h3>
   </div>
   <div class="time_score">
-   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+   <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -375,7 +375,7 @@
     <h3>Question 5 of 14</h3>
   </div>
   <div class="time_score">
-   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+   <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -430,7 +430,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -504,7 +504,7 @@
     <h3>Question 6 of 14</h3>
   </div>
   <div class="time_score">
-  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -589,7 +589,7 @@
     <h3>Question 7 of   15</h3>
   </div>
   <div class="time_score">
-  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -674,7 +674,7 @@
     <h3>Question 8 of 14</h3>
   </div>
   <div class="time_score">
-  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -759,7 +759,7 @@
     <h3>Question 9 of 14</h3>
   </div>
   <div class="time_score">
-    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+    <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -844,7 +844,7 @@
     <h3>Question 10 of 14</h3>
   </div>
   <div class="time_score">
-   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+   <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -898,7 +898,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+    <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -966,7 +966,7 @@
     <h3>Question 11 of 14</h3>
   </div>
   <div class="time_score">
-   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+   <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -1051,7 +1051,7 @@
     <h3>Question 12 of 14</h3>
   </div>
   <div class="time_score">
-   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+   <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -1136,7 +1136,7 @@
     <h3>Question 13 of 14</h3>
   </div>
   <div class="time_score">
- <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+ <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -1221,7 +1221,7 @@
     <h3>Question 14 of 14</h3>
   </div>
   <div class="time_score">
-   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+   <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -1268,13 +1268,13 @@
 
 
 </div>
-<a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+<a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 <div class="question" id="Ad2">
   <div class="question_number">
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+   <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
 
     <div class="container">
       <div id="branding">
@@ -1347,7 +1347,7 @@
 
     <div class="container">
       <div id="branding5">
-        <a target="_blank" href="https://wa.me/27614100661/"><button onclick="CommentSection()"><img src="whatsapp1.png"> </button></a>
+        <a target="_blank" href="https://wa.me/27614150661/"><button onclick="CommentSection()"><img src="whatsapp1.png"> </button></a>
       </div>
     </div>
 
@@ -1367,27 +1367,27 @@
 
     <div  id="results">
       <a href="light_vehicle_controls.html">Try again. Reload This Page</a><br> <br>
-	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R100
+	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R150
   </a>
     </div>
     <div  id="results2">
       <a href="test_code.html">Home Page</a><br> <br>
-	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R100
+	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R150
   </a>
     </div>
     <div  id="results3">
       <a href="light_vehicle_controls.html">Time Over. Reload This Page</a><br> <br>
-	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R100
+	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R150
   </a>
     </div>
     <div  id="results4">
       <a href="learn_lightvehicle.html#p1" style="margin-right: 70px;"><button onclick="learn()">Learn</button></a>
       <a href="#"><button onclick="learn()">Skip</button></a><br> <br>
-	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R100
+	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R150
   </a>
     </div>
 </body>
@@ -1417,7 +1417,7 @@ window.addEventListener('load', init);
   
 function init() 
 {
-  setInterval(countdown, 1000);
+  setInterval(countdown, 1500);
 }
 
 function countdown() 
@@ -1660,7 +1660,7 @@ window.addEventListener('appinstalled', (event) => {
           y: Math.random() * canvas.height,
           r: Math.random() * 6 + 2,
           d: Math.random() * confettiCount,
-          color: `hsl(${Math.random() * 360}, 100%, 50%)`,
+          color: `hsl(${Math.random() * 360}, 150%, 50%)`,
           tilt: Math.random() * 10 - 5
         });
       }
@@ -1864,6 +1864,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
