--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
    target="_blank" 
  class="btn">🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08:
 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span> </a><br> <br>
-			<a href="./bursaries" class="btn">Bursaries 🎓</a><br> <br>
+		<!--	<a href="./bursaries" class="btn">Bursaries 🎓</a><br> <br>
 			
-			<a href="./jobs" class="btn">Jobs 👷‍♂️</a>
+			<a href="./jobs" class="btn">Jobs 👷‍♂️</a> --> 
 			
         </div>
 
@@ -142,6 +142,7 @@
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
