--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
  class="btn">🚦⚠️ <span id="month">January</span> pdf Memo <br> Code 08:
-				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span> </a><br> <br>
+				<span style="color: gold"> R200</span> Code 10:  <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span> </a><br> <br>
 		<!--	<a href="./bursaries" class="btn">Bursaries 🎓</a><br> <br>
 			
 			<a href="./jobs" class="btn">Jobs 👷‍♂️</a> --> 
@@ -142,6 +142,7 @@
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
