--- a/K53_Sign_Test/road_sign_test2.html
+++ b/K53_Sign_Test/road_sign_test2.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 30</h3>
   </div>
   <div class="time_score">
-    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+<a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span>  </a>
 
     <div class="container">
       <div id="branding">
@@ -106,7 +106,7 @@
     <h3>Question 2 of 30</h3>
   </div>
   <div class="time_score">
-    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+<a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span>  </a>
 
     <div class="container">
       <div id="branding">
@@ -401,7 +401,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+<a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span>  </a>
 
     <div class="container">
       <div id="branding">
@@ -1300,7 +1300,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+<a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span>  </a>
 
     <div class="container">
       <div id="branding">
@@ -2232,7 +2232,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
+<a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span>  </a>
 
     <div class="container">
       <div id="branding">
@@ -3255,6 +3255,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
