--- a/K53_Rules_Test/road_rules_test2.html
+++ b/K53_Rules_Test/road_rules_test2.html
@@ -2581,19 +2581,6 @@
 
 
 
-    <div class="container">
-      <div id="branding5">
-        <a target="_blank" href="https://wa.me/27614100661/"><button onclick="CommentSection()"><img src="whatsapp1.png"> </button></a>
-      </div>
-    </div>
-
-
-
-    
-
-    <div  id='results8' style='text-align: center; margin-top: 20px;'>
-      <button  name='skipSubmit' type='submit' id="butInstall">ADD</button> 
-        </div>
 
 
 
@@ -2603,27 +2590,27 @@
 
     <div  id="results">
       <a href="road_rules_test2.html">Try again. Reload This Page</a><br> <br>
-	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R100
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;font-size: 11px;">
+      🚦Get the exact <span id="month"></span> pdf Memo <br><br> Code 08: 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span>
   </a>
     </div>
     <div  id="results2">
       <a href="road_rules_tests.html">Home Page</a><br> <br>
-	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R100
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;font-size: 11px;">
+      🚦Get the exact <span id="month"></span> pdf Memo <br><br> Code 08: 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span>
   </a>
     </div>
     <div  id="results3">
       <a href="road_rules_test2.html">Time Over. Reload This Page</a><br> <br>
-	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R100
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;font-size: 11px;">
+      🚦Get the exact <span id="month"></span> pdf Memo <br><br> Code 08: 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span>
   </a>
     </div>
     <div  id="results4">
       <a href="learn_road_rules.html" style="margin-right: 70px;"><button onclick="learn()">Learn</button></a>
       <a href="#"><button onclick="learn()">Skip</button></a><br> <br>
-	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R100
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;font-size: 11px;">
+      🚦Get the exact <span id="month"></span> pdf Memo <br><br> Code 08: 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span>
   </a>
     </div>
 </body>
@@ -3095,6 +3082,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
